--- a/stories/index.html
+++ b/stories/index.html
@@ -4192,6 +4192,18 @@
       <td><a name="vi0052"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0066</td>
+      <td><a href="/stories/vi/0066_nozibele-và-3-sợi-tóc_slides.html" target="_blank">Nozibele và 3 sợi tóc</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsUkNWSV81TG5YVGc"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="vi0066"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0067</td>
+      <td><a href="/stories/vi/0067_nấu-ăn_slides.html" target="_blank">Nấu ăn</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsUkNWSV81TG5YVGc"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="vi0067"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0090</td>
       <td><a href="/stories/vi/0090_nhà-chòi-của-làng-tôi_slides.html" target="_blank">Nhà chòi của làng tôi</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsUkNWSV81TG5YVGc"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -4220,6 +4232,18 @@
       <td><a href="/stories/vi/0331_mưa_slides.html" target="_blank">Mưa</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsUkNWSV81TG5YVGc"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="vi0331"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0337</td>
+      <td><a href="/stories/vi/0337_những-đứa-trẻ-bằng-sáp_slides.html" target="_blank">Những đứa trẻ bằng sáp.</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsUkNWSV81TG5YVGc"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="vi0337"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0342</td>
+      <td><a href="/stories/vi/0342_hình-phạt_slides.html" target="_blank">Hình phạt.</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsUkNWSV81TG5YVGc"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="vi0342"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
 </table>
@@ -4355,13 +4379,13 @@
       <td>0066</td>
       <td><a href="http://africanstorybook.org/stories/nozibele-and-three-hairs">Nozibele and the three hairs</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0066">ar</a>, <a href="#es0066">es</a>, <a href="#fa0066">fa</a>, <a href="#ko0066">ko</a>, <a href="#pa0066">pa</a>, <a href="#ru0066">ru</a>, <a href="#tl0066">tl</a>, <a href="#zh0066">zh</a></td>
+      <td><a href="#ar0066">ar</a>, <a href="#es0066">es</a>, <a href="#fa0066">fa</a>, <a href="#ko0066">ko</a>, <a href="#pa0066">pa</a>, <a href="#ru0066">ru</a>, <a href="#tl0066">tl</a>, <a href="#vi0066">vi</a>, <a href="#zh0066">zh</a></td>
     </tr>
     <tr>
       <td>0067</td>
       <td><a href="http://africanstorybook.org/stories/cooking">Cooking</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0067">ar</a>, <a href="#de0067">de</a>, <a href="#es0067">es</a>, <a href="#fa0067">fa</a>, <a href="#gu0067">gu</a>, <a href="#ko0067">ko</a>, <a href="#no0067">no</a>, <a href="#pa0067">pa</a>, <a href="#ru0067">ru</a>, <a href="#tl0067">tl</a>, <a href="#tr0067">tr</a>, <a href="#yue0067">yue</a>, <a href="#zh0067">zh</a></td>
+      <td><a href="#ar0067">ar</a>, <a href="#de0067">de</a>, <a href="#es0067">es</a>, <a href="#fa0067">fa</a>, <a href="#gu0067">gu</a>, <a href="#ko0067">ko</a>, <a href="#no0067">no</a>, <a href="#pa0067">pa</a>, <a href="#ru0067">ru</a>, <a href="#tl0067">tl</a>, <a href="#tr0067">tr</a>, <a href="#vi0067">vi</a>, <a href="#yue0067">yue</a>, <a href="#zh0067">zh</a></td>
     </tr>
     <tr>
       <td>0068</td>
@@ -4793,7 +4817,7 @@
       <td>0337</td>
       <td><a href="http://africanstorybook.org/stories/children-wax">Children of wax</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0337">ar</a>, <a href="#es0337">es</a>, <a href="#fa0337">fa</a>, <a href="#gu0337">gu</a>, <a href="#ko0337">ko</a>, <a href="#nl0337">nl</a>, <a href="#nn0337">nn</a>, <a href="#no0337">no</a>, <a href="#pa0337">pa</a>, <a href="#tl0337">tl</a>, <a href="#yue0337">yue</a>, <a href="#zh0337">zh</a></td>
+      <td><a href="#ar0337">ar</a>, <a href="#es0337">es</a>, <a href="#fa0337">fa</a>, <a href="#gu0337">gu</a>, <a href="#ko0337">ko</a>, <a href="#nl0337">nl</a>, <a href="#nn0337">nn</a>, <a href="#no0337">no</a>, <a href="#pa0337">pa</a>, <a href="#tl0337">tl</a>, <a href="#vi0337">vi</a>, <a href="#yue0337">yue</a>, <a href="#zh0337">zh</a></td>
     </tr>
     <tr>
       <td>0341</td>
@@ -4805,7 +4829,7 @@
       <td>0342</td>
       <td><a href="http://africanstorybook.org/stories/punishment">Punishment</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0342">ar</a>, <a href="#es0342">es</a>, <a href="#fa0342">fa</a>, <a href="#ko0342">ko</a>, <a href="#pa0342">pa</a>, <a href="#tl0342">tl</a>, <a href="#yue0342">yue</a>, <a href="#zh0342">zh</a></td>
+      <td><a href="#ar0342">ar</a>, <a href="#es0342">es</a>, <a href="#fa0342">fa</a>, <a href="#ko0342">ko</a>, <a href="#pa0342">pa</a>, <a href="#tl0342">tl</a>, <a href="#vi0342">vi</a>, <a href="#yue0342">yue</a>, <a href="#zh0342">zh</a></td>
     </tr>
     <tr>
       <td>0359</td>
