--- a/stories/index.html
+++ b/stories/index.html
@@ -4228,6 +4228,18 @@
       <td><a name="vi0271"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0324</td>
+      <td><a href="/stories/vi/0324_ngày-tôi-rời-khỏi-thành-phố_slides.html" target="_blank">Ngày tôi rời khỏi thành phố</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsUkNWSV81TG5YVGc"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="vi0324"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0327</td>
+      <td><a href="/stories/vi/0327_đếm-thú-_slides.html" target="_blank">Đếm thú</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsUkNWSV81TG5YVGc"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="vi0327"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0331</td>
       <td><a href="/stories/vi/0331_mưa_slides.html" target="_blank">Mưa</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsUkNWSV81TG5YVGc"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -4799,13 +4811,13 @@
       <td>0324</td>
       <td><a href="http://africanstorybook.org/stories/day-i-left-home-city">The day I left home for the city</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0324">ar</a>, <a href="#es0324">es</a>, <a href="#fa0324">fa</a>, <a href="#ko0324">ko</a>, <a href="#pa0324">pa</a>, <a href="#tl0324">tl</a>, <a href="#zh0324">zh</a></td>
+      <td><a href="#ar0324">ar</a>, <a href="#es0324">es</a>, <a href="#fa0324">fa</a>, <a href="#ko0324">ko</a>, <a href="#pa0324">pa</a>, <a href="#tl0324">tl</a>, <a href="#vi0324">vi</a>, <a href="#zh0324">zh</a></td>
     </tr>
     <tr>
       <td>0327</td>
       <td><a href="http://africanstorybook.org/stories/counting-animals">Counting animals</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#aeb0327">aeb</a>, <a href="#ar0327">ar</a>, <a href="#es0327">es</a>, <a href="#fa0327">fa</a>, <a href="#ko0327">ko</a>, <a href="#no0327">no</a>, <a href="#pa0327">pa</a>, <a href="#tl0327">tl</a>, <a href="#yue0327">yue</a>, <a href="#zh0327">zh</a></td>
+      <td><a href="#aeb0327">aeb</a>, <a href="#ar0327">ar</a>, <a href="#es0327">es</a>, <a href="#fa0327">fa</a>, <a href="#ko0327">ko</a>, <a href="#no0327">no</a>, <a href="#pa0327">pa</a>, <a href="#tl0327">tl</a>, <a href="#vi0327">vi</a>, <a href="#yue0327">yue</a>, <a href="#zh0327">zh</a></td>
     </tr>
     <tr>
       <td>0331</td>
