--- a/stories/index.html
+++ b/stories/index.html
@@ -1852,6 +1852,12 @@
   </thead>
   <tbody>
     <tr>
+      <td>0001</td>
+      <td><a href="/stories/ja/0001_とてもせがたかい　おとこが　いた_slides.html" target="_blank">とてもせがたかい　おとこが　いた</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0001"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0008</td>
       <td><a href="/stories/ja/0008_なにしてるの_slides.html" target="_blank">なにしてるの？</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -4283,7 +4289,7 @@
       <td>0001</td>
       <td><a href="http://africanstorybook.org/stories/very-tall-man">A very tall man</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0001">ar</a>, <a href="#da0001">da</a>, <a href="#de0001">de</a>, <a href="#eo0001">eo</a>, <a href="#es0001">es</a>, <a href="#fa0001">fa</a>, <a href="#gu0001">gu</a>, <a href="#hi0001">hi</a>, <a href="#ko0001">ko</a>, <a href="#nn0001">nn</a>, <a href="#no0001">no</a>, <a href="#pa0001">pa</a>, <a href="#ru0001">ru</a>, <a href="#sv0001">sv</a>, <a href="#tl0001">tl</a>, <a href="#tr0001">tr</a>, <a href="#vi0001">vi</a>, <a href="#yue0001">yue</a>, <a href="#zh0001">zh</a></td>
+      <td><a href="#ar0001">ar</a>, <a href="#da0001">da</a>, <a href="#de0001">de</a>, <a href="#eo0001">eo</a>, <a href="#es0001">es</a>, <a href="#fa0001">fa</a>, <a href="#gu0001">gu</a>, <a href="#hi0001">hi</a>, <a href="#ja0001">ja</a>, <a href="#ko0001">ko</a>, <a href="#nn0001">nn</a>, <a href="#no0001">no</a>, <a href="#pa0001">pa</a>, <a href="#ru0001">ru</a>, <a href="#sv0001">sv</a>, <a href="#tl0001">tl</a>, <a href="#tr0001">tr</a>, <a href="#vi0001">vi</a>, <a href="#yue0001">yue</a>, <a href="#zh0001">zh</a></td>
     </tr>
     <tr>
       <td>0002</td>
