--- a/stories/ja/0001_とてもせがたかい　おとこが　いた_slides.html
+++ b/stories/ja/0001_とてもせがたかい　おとこが　いた_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>یک دانه ی کوچک : داستان وانگاری ماتای - Global African Storybook</title>
+  <title>とてもせがたかい　おとこが　いた - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="یک-دانه-ی-کوچک-داستان-وانگاری-ماتای" class="slide level1">
-<h1 dir="rtl" dir="rtl">یک دانه ی کوچک : داستان وانگاری ماتای</h1>
+<section id="とてもせがたかいおとこがいた" class="slide level1">
+<h1>とてもせがたかい　おとこが　いた</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/02.jpg" /></p>
-<p dir="rtl">در روستایی روی سرازیری کوه کنیا در شرق آفریقا، دختری کوچکی با مادرش روی زمینی کار می کرد. اسم آن دختر وانگاری بود.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/02.jpg" /></p>
+<p>かれの　くわは　みじかすぎた</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/03.jpg" /></p>
-<p dir="rtl">وانگاری از بیرون بودن لذت می برد. درباغچه ی خانوادگیشان که محصولات غذایی بود با کارد بزرگ خود خاک را زیر و رو می کرد. او دانه های کوچک را در زیر خاک گرم فرو می کرد و روی آن را با خاک می پوشانید.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/03.jpg" /></p>
+<p>かれの　ドアは　ひくすぎた</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/04.jpg" /></p>
-<p dir="rtl">بهترین زمان مورد علاقه ی او در طول روز، زمان غروب بود. زمانی که خیلی تاریک می شد و نمی شد گیاهان را دید، وانگاری می دانست که دیگر باید به خانه برگردد. او ازکنار رودخانه ها و مسیرهای باریکی که در بین زمین های کشاورزی بود رد می شد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/04.jpg" /></p>
+<p>かれの　ベッドは　みじかすぎた</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/05.jpg" /></p>
-<p dir="rtl">وانگاری بچه ی باهوشی بود و نمیتوانست برای به مدرسه رفتن صبر کند. ولی مادر وپدرش میخواستند که او بماند و به آنها در خانه کمک کند. وقتی که او هفت ساله شد. برادر بزرگش، پدر و مادرش، را وادار کرد که به او اجازه ی مدرسه رفتن بدهند.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/05.jpg" /></p>
+<p>かれの　じてんしゃは　ひくすぎた</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/06.jpg" /></p>
-<p dir="rtl">او به یادگیری علاقه داشت ! وانگاری با خواندن هر کتاب مطالب بیشتر وبیشتری یاد گرفت. او در مدرسه عالی بود به طوری که به ادامه تحصیل در ایالت متحده ی آمریکا دعوت شد. وانگاری هیجان زده بود ! او می خواست که بیشتر در مورد دنیا بداند.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/06.jpg" /></p>
+<p>かれは　とにかく　せが　たかすぎたのだ！</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/07.jpg" /></p>
-<p dir="rtl">در دانشگاه آمریکا وانگاری چیزهای جدید زیادی یاد گرفت. او در مورد گیاهان و اینکه چگونه رشد می کنند درس می خواند. و به یاد می آورد که خودش چگونه بزرگ شده است : به یاد می آورد که چگونه در زیر سایه درختان در جنگل های زیبای کنیا با برادرش بازی می کرد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/07.jpg" /></p>
+<p>だから　かれは　とってのながい　くわを　つくった</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/08.jpg" /></p>
-<p dir="rtl">هر چه بیشتر یاد می گرفت، بیشتر می فهمید که چقدر مردم کنیا را دوست دارد. او می خواست که مردم شاد و آزاد باشند. هر چه بیشتر یاد می گرفت، بیشتر خانه ی آفریقایی اش را به یاد می آورد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/08.jpg" /></p>
+<p>かれは　とてもたかい　ドアのフレームを　つくった</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/09.jpg" /></p>
-<p dir="rtl">وقتی که تحصیلاتش به پایان رسید، به کنیا برگشت. ولی شهرش تغییر کرده بود. مزرعه های خیلی بزرگ در طول زمین گسترده شده بودند. زن ها دیگر هیزم برای آشپزی نداشتند. مردم فقیر بودند و بچه ها گرسنه.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/09.jpg" /></p>
+<p>かれは　とてもながい　ベッドを　つくった</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/10.jpg" /></p>
-<p dir="rtl">وانگاری می دانست که چه کار کند. او به آن زن یاد داد که چگونه می تواند با استفاده از دانه ها درخت بکارد. آن زن درخت ها را می فروخت و از پولش برای مراقبت از خانواده اش استفاده می کرد. آن زن خیلی خوشحال بود. وانگاری به آنها کمک کرده بود که احساس قدرتمندی و نیرومندی کنند.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/10.jpg" /></p>
+<p>かれは　とてもせのたかい　じてんしゃを　かった</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/11.jpg" /></p>
-<p dir="rtl">همچنان که زمان می گذشت، درخت های جدید در جنگل ها رشد کردند، و رودخانه دوباره جاری شدند. پیام وانگاری در سرتاسر آفریقا پیچید. امروزه میلیون ها درخت از بذرهای وانگاری رشد کرده اند.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/11.jpg" /></p>
+<p>かれは　とてもたかい　いすに　すわった。かれは　とてもながい　フォークで　たべた</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,8 +186,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/12.jpg" /></p>
-<p dir="rtl">وانگاری سخت کار کرده بود. مردم سراسر دنیا متوجه این قضیه شدند، و به او یک جایزه ی عالی دادند. آن جایزه، جایزه ی صلح نوبل بود،و او اولین زن آفریقایی بود که این جایزه را دریافت می کرد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/12.jpg" /></p>
+<p>かれは　じぶんのいえをでて　ひろいもりに　すんだ。そして　そこに　なんねんも　すんだ</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,26 +195,17 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/13.jpg" /></p>
-<p dir="rtl">وانگاری در سال2011، فوت شد، ولی ما هر وقت که به یک درخت زیبا نگاه می کنیم به یاد او می افتیم.</p>
-<center>
-<strong>12</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 dir="rtl" dir="rtl" id="یک-دانه-ی-کوچک-داستان-وانگاری-ماتای-1">یک دانه ی کوچک : داستان وانگاری ماتای</h2>
-<strong>Text:</strong> Nicola Rijsdijk<br> <strong>Illustrations:</strong> Maya Marshak<br> <strong>Translation:</strong> Marzieh Mohammadian Haghighi<br> <strong>Language:</strong> Persian<br>
-<p dir="rtl">
+<h2 id="とてもせがたかいおとこがいた-1">とてもせがたかい　おとこが　いた</h2>
+<strong>作:</strong> Cornelius Gulere<br> <strong>絵:</strong> Catherine Groenewald<br> <strong>訳:</strong> Tomoyo Okuda<br> <strong>言語:</strong> 日本語<br>
+<p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p dir="rtl">
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/tiny-seed-story-wangari-maathai'>here</a>
-<p dir="rtl"><div class="license">
+<p>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/very-tall-man'>here</a>
+<p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p dir="rtl"><center><div class="license">
+<p><center><div class="license">
 <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
