--- a/stories/index.html
+++ b/stories/index.html
@@ -1483,6 +1483,12 @@
       <td><a name="de0215"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0231</td>
+      <td><a href="/stories/de/0231_wetterbuch_slides.html" target="_blank">Wetterbuch</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSGhmRl9nMlNWaG8"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="de0231"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0253</td>
       <td><a href="/stories/de/0253_mein-bilderbuch_slides.html" target="_blank">Mein Bilderbuch</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSGhmRl9nMlNWaG8"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -1820,6 +1826,30 @@
       <td><a href="/stories/it/0004_capra-cane-e-mucca_slides.html" target="_blank">Capra, Cane e Mucca</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="it0004"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0006</td>
+      <td><a href="/stories/it/0006_anansi-e-la-saggezza_slides.html" target="_blank">Anansi e la Saggezza</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="it0006"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0008</td>
+      <td><a href="/stories/it/0008_che-cosa-stai-facendo-_slides.html" target="_blank">Che cosa stai facendo?</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="it0008"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0009</td>
+      <td><a href="/stories/it/0009_dovè-il-mio-gatto_slides.html" target="_blank">Dov’è il mio gatto?</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="it0009"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0030</td>
+      <td><a href="/stories/it/0030_sentimenti_slides.html" target="_blank">Sentimenti</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="it0030"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
       <td>0253</td>
@@ -4337,7 +4367,7 @@
       <td>0006</td>
       <td><a href="http://africanstorybook.org/stories/anansi-and-wisdom">Anansi and Wisdom</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0006">ar</a>, <a href="#eo0006">eo</a>, <a href="#es0006">es</a>, <a href="#fa0006">fa</a>, <a href="#ko0006">ko</a>, <a href="#no0006">no</a>, <a href="#pa0006">pa</a>, <a href="#ru0006">ru</a>, <a href="#tl0006">tl</a>, <a href="#tr0006">tr</a>, <a href="#vi0006">vi</a>, <a href="#yue0006">yue</a>, <a href="#zh0006">zh</a></td>
+      <td><a href="#ar0006">ar</a>, <a href="#eo0006">eo</a>, <a href="#es0006">es</a>, <a href="#fa0006">fa</a>, <a href="#it0006">it</a>, <a href="#ko0006">ko</a>, <a href="#no0006">no</a>, <a href="#pa0006">pa</a>, <a href="#ru0006">ru</a>, <a href="#tl0006">tl</a>, <a href="#tr0006">tr</a>, <a href="#vi0006">vi</a>, <a href="#yue0006">yue</a>, <a href="#zh0006">zh</a></td>
     </tr>
     <tr>
       <td>0007</td>
@@ -4349,13 +4379,13 @@
       <td>0008</td>
       <td><a href="http://africanstorybook.org/stories/what-are-you-doing">What are you doing?</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#aeb0008">aeb</a>, <a href="#ar0008">ar</a>, <a href="#da0008">da</a>, <a href="#de0008">de</a>, <a href="#eo0008">eo</a>, <a href="#es0008">es</a>, <a href="#fa0008">fa</a>, <a href="#gu0008">gu</a>, <a href="#ja0008">ja</a>, <a href="#jam0008">jam</a>, <a href="#ko0008">ko</a>, <a href="#nn0008">nn</a>, <a href="#no0008">no</a>, <a href="#pa0008">pa</a>, <a href="#ru0008">ru</a>, <a href="#tl0008">tl</a>, <a href="#tr0008">tr</a>, <a href="#uk0008">uk</a>, <a href="#vi0008">vi</a>, <a href="#yue0008">yue</a>, <a href="#zh0008">zh</a></td>
+      <td><a href="#aeb0008">aeb</a>, <a href="#ar0008">ar</a>, <a href="#da0008">da</a>, <a href="#de0008">de</a>, <a href="#eo0008">eo</a>, <a href="#es0008">es</a>, <a href="#fa0008">fa</a>, <a href="#gu0008">gu</a>, <a href="#it0008">it</a>, <a href="#ja0008">ja</a>, <a href="#jam0008">jam</a>, <a href="#ko0008">ko</a>, <a href="#nn0008">nn</a>, <a href="#no0008">no</a>, <a href="#pa0008">pa</a>, <a href="#ru0008">ru</a>, <a href="#tl0008">tl</a>, <a href="#tr0008">tr</a>, <a href="#uk0008">uk</a>, <a href="#vi0008">vi</a>, <a href="#yue0008">yue</a>, <a href="#zh0008">zh</a></td>
     </tr>
     <tr>
       <td>0009</td>
       <td><a href="http://africanstorybook.org/stories/where-my-cat">Where is my cat?</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#aeb0009">aeb</a>, <a href="#ar0009">ar</a>, <a href="#da0009">da</a>, <a href="#de0009">de</a>, <a href="#eo0009">eo</a>, <a href="#es0009">es</a>, <a href="#fa0009">fa</a>, <a href="#gu0009">gu</a>, <a href="#ja0009">ja</a>, <a href="#jam0009">jam</a>, <a href="#ko0009">ko</a>, <a href="#nn0009">nn</a>, <a href="#no0009">no</a>, <a href="#pa0009">pa</a>, <a href="#ru0009">ru</a>, <a href="#sv0009">sv</a>, <a href="#tl0009">tl</a>, <a href="#tr0009">tr</a>, <a href="#vi0009">vi</a>, <a href="#yue0009">yue</a>, <a href="#zh0009">zh</a></td>
+      <td><a href="#aeb0009">aeb</a>, <a href="#ar0009">ar</a>, <a href="#da0009">da</a>, <a href="#de0009">de</a>, <a href="#eo0009">eo</a>, <a href="#es0009">es</a>, <a href="#fa0009">fa</a>, <a href="#gu0009">gu</a>, <a href="#it0009">it</a>, <a href="#ja0009">ja</a>, <a href="#jam0009">jam</a>, <a href="#ko0009">ko</a>, <a href="#nn0009">nn</a>, <a href="#no0009">no</a>, <a href="#pa0009">pa</a>, <a href="#ru0009">ru</a>, <a href="#sv0009">sv</a>, <a href="#tl0009">tl</a>, <a href="#tr0009">tr</a>, <a href="#vi0009">vi</a>, <a href="#yue0009">yue</a>, <a href="#zh0009">zh</a></td>
     </tr>
     <tr>
       <td>0010</td>
@@ -4385,7 +4415,7 @@
       <td>0030</td>
       <td><a href="http://africanstorybook.org/stories/feelings">Feelings</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#aeb0030">aeb</a>, <a href="#ar0030">ar</a>, <a href="#es0030">es</a>, <a href="#fa0030">fa</a>, <a href="#ko0030">ko</a>, <a href="#pa0030">pa</a>, <a href="#ru0030">ru</a>, <a href="#tl0030">tl</a>, <a href="#tr0030">tr</a>, <a href="#vi0030">vi</a>, <a href="#yue0030">yue</a>, <a href="#zh0030">zh</a></td>
+      <td><a href="#aeb0030">aeb</a>, <a href="#ar0030">ar</a>, <a href="#es0030">es</a>, <a href="#fa0030">fa</a>, <a href="#it0030">it</a>, <a href="#ko0030">ko</a>, <a href="#pa0030">pa</a>, <a href="#ru0030">ru</a>, <a href="#tl0030">tl</a>, <a href="#tr0030">tr</a>, <a href="#vi0030">vi</a>, <a href="#yue0030">yue</a>, <a href="#zh0030">zh</a></td>
     </tr>
     <tr>
       <td>0049</td>
@@ -4709,7 +4739,7 @@
       <td>0231</td>
       <td><a href="http://africanstorybook.org/stories/weather-book">Weather book</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0231">ar</a>, <a href="#es0231">es</a>, <a href="#fa0231">fa</a>, <a href="#hi0231">hi</a>, <a href="#ko0231">ko</a>, <a href="#nl0231">nl</a>, <a href="#nn0231">nn</a>, <a href="#no0231">no</a>, <a href="#pa0231">pa</a>, <a href="#tl0231">tl</a>, <a href="#yue0231">yue</a>, <a href="#zh0231">zh</a></td>
+      <td><a href="#ar0231">ar</a>, <a href="#de0231">de</a>, <a href="#es0231">es</a>, <a href="#fa0231">fa</a>, <a href="#hi0231">hi</a>, <a href="#ko0231">ko</a>, <a href="#nl0231">nl</a>, <a href="#nn0231">nn</a>, <a href="#no0231">no</a>, <a href="#pa0231">pa</a>, <a href="#tl0231">tl</a>, <a href="#yue0231">yue</a>, <a href="#zh0231">zh</a></td>
     </tr>
     <tr>
       <td>0234</td>
