--- a/stories/index.html
+++ b/stories/index.html
@@ -1852,6 +1852,24 @@
       <td><a name="it0030"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0052</td>
+      <td><a href="/stories/it/0052_simbegwire_slides.html" target="_blank">Simbegwire</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="it0052"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0066</td>
+      <td><a href="/stories/it/0066_nozibele-e-i-tre-capelli_slides.html" target="_blank">Nozibele e i tre capelli</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="it0066"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0067</td>
+      <td><a href="/stories/it/0067_cucinando_slides.html" target="_blank">Cucinando</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="it0067"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0253</td>
       <td><a href="/stories/it/0253_mio-libbro-di-immagini_slides.html" target="_blank">Mio libbro di immagini</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -4433,7 +4451,7 @@
       <td>0052</td>
       <td><a href="http://africanstorybook.org/stories/simbegwire">Simbegwire</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0052">ar</a>, <a href="#es0052">es</a>, <a href="#fa0052">fa</a>, <a href="#ko0052">ko</a>, <a href="#no0052">no</a>, <a href="#pa0052">pa</a>, <a href="#ru0052">ru</a>, <a href="#tl0052">tl</a>, <a href="#tr0052">tr</a>, <a href="#vi0052">vi</a>, <a href="#yue0052">yue</a>, <a href="#zh0052">zh</a></td>
+      <td><a href="#ar0052">ar</a>, <a href="#es0052">es</a>, <a href="#fa0052">fa</a>, <a href="#it0052">it</a>, <a href="#ko0052">ko</a>, <a href="#no0052">no</a>, <a href="#pa0052">pa</a>, <a href="#ru0052">ru</a>, <a href="#tl0052">tl</a>, <a href="#tr0052">tr</a>, <a href="#vi0052">vi</a>, <a href="#yue0052">yue</a>, <a href="#zh0052">zh</a></td>
     </tr>
     <tr>
       <td>0053</td>
@@ -4457,13 +4475,13 @@
       <td>0066</td>
       <td><a href="http://africanstorybook.org/stories/nozibele-and-three-hairs">Nozibele and the three hairs</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0066">ar</a>, <a href="#es0066">es</a>, <a href="#fa0066">fa</a>, <a href="#ko0066">ko</a>, <a href="#pa0066">pa</a>, <a href="#ru0066">ru</a>, <a href="#tl0066">tl</a>, <a href="#vi0066">vi</a>, <a href="#zh0066">zh</a></td>
+      <td><a href="#ar0066">ar</a>, <a href="#es0066">es</a>, <a href="#fa0066">fa</a>, <a href="#it0066">it</a>, <a href="#ko0066">ko</a>, <a href="#pa0066">pa</a>, <a href="#ru0066">ru</a>, <a href="#tl0066">tl</a>, <a href="#vi0066">vi</a>, <a href="#zh0066">zh</a></td>
     </tr>
     <tr>
       <td>0067</td>
       <td><a href="http://africanstorybook.org/stories/cooking">Cooking</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0067">ar</a>, <a href="#de0067">de</a>, <a href="#es0067">es</a>, <a href="#fa0067">fa</a>, <a href="#gu0067">gu</a>, <a href="#ko0067">ko</a>, <a href="#no0067">no</a>, <a href="#pa0067">pa</a>, <a href="#ru0067">ru</a>, <a href="#tl0067">tl</a>, <a href="#tr0067">tr</a>, <a href="#vi0067">vi</a>, <a href="#yue0067">yue</a>, <a href="#zh0067">zh</a></td>
+      <td><a href="#ar0067">ar</a>, <a href="#de0067">de</a>, <a href="#es0067">es</a>, <a href="#fa0067">fa</a>, <a href="#gu0067">gu</a>, <a href="#it0067">it</a>, <a href="#ko0067">ko</a>, <a href="#no0067">no</a>, <a href="#pa0067">pa</a>, <a href="#ru0067">ru</a>, <a href="#tl0067">tl</a>, <a href="#tr0067">tr</a>, <a href="#vi0067">vi</a>, <a href="#yue0067">yue</a>, <a href="#zh0067">zh</a></td>
     </tr>
     <tr>
       <td>0068</td>
